--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                 <section class="text">
                     <h1><strong><</strong>Believe in Yourself<strong>></strong></h1>
                     <p class="texto-paragrafo">
-                    Eae, sou o Douglas ou Favst se assim preferir, e a função dessa página é ligar minhas principais redes sociais.<br><br>
+                    Sou o Douglas designer e desenvolvedor e a função dessa página é expor um novo projeto de identidade visual juntamento com apresentar minhas principais redes sociais.<br><br>
 
                     Sou estudante de TI e atualmente trabalho como design de experiência e com desenvolvimento de interfaces. Estudo, principalmente, por meio de materiais gratuitos disponibilizados pelas comunidades e venho caminhando entre DevOps, cibersegurança e design.<br><br>
 
-                    O nick e a identidade foram idealizadas mediante o conto de Fausto de Goethe, onde o protragonista vende sua alma em troca de superar os conhecimentos de sua época.<br><br>
+                    A identidade foram idealizadas mediante o conto de Fausto de Goethe, onde o protragonista vende sua alma em troca de superar os conhecimentos de sua época.<br><br>
                 </p><!--fim paragrafp-->
                 </section>
 
