--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <section class="text">
                     <h1><strong><</strong>Believe in Yourself<strong>></strong></h1>
                     <p class="texto-paragrafo">
-                    Sou o Douglas designer e desenvolvedor e a função dessa página é expor um novo projeto de identidade visual juntamento com apresentar minhas principais redes sociais.<br><br>
+                    Sou o Douglas designer e desenvolvedor e a função dessa página é expor um novo projeto de identidade visual e também para apresentar minhas principais redes sociais.<br><br>
 
                     Sou estudante de TI e atualmente trabalho como design de experiência e com desenvolvimento de interfaces. Estudo, principalmente, por meio de materiais gratuitos disponibilizados pelas comunidades e venho caminhando entre DevOps, cibersegurança e design.<br><br>
 
