--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <p class="texto-paragrafo">
                     Sou o Douglas designer e desenvolvedor e a função dessa página é expor um novo projeto de identidade visual e também para apresentar minhas principais redes sociais.<br><br>
 
-                    Sou estudante de TI e atualmente trabalho como design de experiência e com desenvolvimento de interfaces. Estudo, principalmente, por meio de materiais gratuitos disponibilizados pelas comunidades e venho caminhando entre DevOps, cibersegurança e design.<br><br>
+                    Sou estudante de TI e atualmente trabalho como design de experiência e com desenvolvimento de interfaces. Estudo, principalmente, por meio de materiais gratuitos disponibilizados pelas comunidades.<br><br>
 
                     A identidade foram idealizadas mediante o conto de Fausto de Goethe, onde o protragonista vende sua alma em troca de superar os conhecimentos de sua época.<br><br>
                 </p><!--fim paragrafp-->
