--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                     Sou estudante de TI e atualmente trabalho como design de experiência e com desenvolvimento de interfaces. Estudo, principalmente, por meio de materiais gratuitos disponibilizados pelas comunidades.<br><br>
 
-                    A identidade foram idealizadas mediante o conto de Fausto de Goethe, onde o protragonista vende sua alma em troca de superar os conhecimentos de sua época.<br><br>
+                    A identidade foi idealizada mediante o conto de Fausto de Goethe, onde o protragonista vende sua alma em troca de superar os conhecimentos de sua época.<br><br>
                 </p><!--fim paragrafp-->
                 </section>
 
